--- a/client/src/styles/_about.scss
+++ b/client/src/styles/_about.scss
@@ -22,6 +22,10 @@
     }
 }
 
+.about-container {
+    padding: 50px;
+    background-color: #ffffff;
+}
 
 
 .box {
@@ -48,10 +52,12 @@
     @media screen and (max-width:800px){
         width: 75%;
     }
-    background-color:rgba(104, 82, 231, 0.25);
+    background-color:var(--blue-text-background);
+    color: white;
     background-position:left bottom;
     position: relative;
     width: 100%;
+    padding: 1rem;
     border-radius: .5rem;
     display: block;
     &::before {
@@ -65,22 +71,26 @@
         padding: 1rem .25rem;
         font-size: 1.25rem;
         transform: translateX(-10%);
-        background-color: rgba(82, 11, 139, 0.5);
+        background-color:var(--blue-text-background-hover);
         background-position:left bottom;
         transition:all 1s ease;
     }
 }
 
 .timeline{
+    --timeline-length: 15rem;
+    --timeline-diff: 3rem;
+    --timeline-width: calc(var(--timeline-length) - var(--timeline-diff));
+    --timeline-color:orange;
     margin-top: 10rem;
     .first{
         margin: 0;
-        width: 10rem;
-        height: 15rem;
+        width: var(--timeline-length);
+        height: var(--timeline-width);
         border-width: 0;
         border-style: dashed;
         border-left-width: .5rem;
-        border-color: yellow;
+        border-color: var(--timeline-color);
         .relative{
             @include timeline-box;
             position: relative;
@@ -97,13 +107,13 @@
     }
     .second{
         margin: 0;
-        height: 15rem;
-        width: 10rem;
+        height: var(--timeline-width);
+        width: var(--timeline-length);
         border-width: 0;
         border-style: dashed;
         border-top-width: .5rem;
         border-right-width: .5rem;
-        border-color: yellow;
+        border-color: var(--timeline-color);
         .relative{
             @include timeline-box;
             top: 1rem;
@@ -116,20 +126,18 @@
     }
     .third{
         margin: 0;
-        height: 15rem;
-        width: 10rem;
+        height: var(--timeline-width);
+        width: var(--timeline-length);
         border-width: 0;
         border-style: dashed;
         border-top-width: .5rem;
         border-left-width: .5rem;
-        border-color: yellow;
+        border-color: var(--timeline-color);
         .relative{
             @include timeline-box;
             top: 1rem;
             left: 65%;
             border-style: none;
         }
-
- 
     }
 }
