--- a/client/src/styles/_projects.scss
+++ b/client/src/styles/_projects.scss
@@ -17,18 +17,18 @@
         color: blue;
     }
 }
+.projects-container { 
+    padding: 50px;
+    background-color: #2E3B55;
+}
 
 .project-container{
     
     display: flex;
     padding: 2rem;
-    flex-direction: row;
     height: 900px;
     justify-content: space-between;
     align-items: center;
-    align-content: center;
-    margin: 2rem auto;
-    margin-top: 5rem;
 
     @media screen and (max-width: 800px){
         display: block;
@@ -38,7 +38,7 @@
     }
     .project{
         display: block;
-        margin: 2rem 2rem;
+        margin: 0 2rem;
         height: 40%;
         font-size: 4rem;
         background-color: grey;
