--- a/client/src/styles/_submenu.scss
+++ b/client/src/styles/_submenu.scss
@@ -1,24 +1,27 @@
+
+
 .submenu-container {
 
     display: flex;
     flex-direction: column;
     position: absolute;
-    background-color:transparent;
-    border: 4px solid rgba(133, 111, 255, 0.5);
+    background-color:#1a1436;
+    // border: 4px solid rgba(133, 111, 255, 0.5);
     border-top: none;
-    right: 5%;
     top: 100%;
     border-bottom-left-radius: .5rem;
     border-bottom-right-radius: .5rem;
+    padding: 1rem;
+    transform: translateX(-20%);
+    
 
     .work{
         text-align: center;
-        padding: .25rem;
-        margin: .25rem;
+        margin: .25rem .25rem;
         border-radius: .125rem;
-        color: white;
-        :hover{
-            color: rgba(155, 69, 69, 0.233);
+        color: #716b9c;
+        &:hover{
+            color: white;
         }
     }
 }
