--- a/client/src/styles/_layout.scss
+++ b/client/src/styles/_layout.scss
@@ -41,6 +41,7 @@ template {
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  color: white;
 }
 a:active,
 a:hover {
