--- a/client/src/styles/_navbar.scss
+++ b/client/src/styles/_navbar.scss
@@ -2,19 +2,25 @@
 
 .navbar {
   padding: 0 2rem;
-  width: 100%; 
-  position: fixed; 
-  display: flex; 
+  width: 100%;
+  position: fixed;
+  display: flex;
   justify-content: space-between;
-  align-items: center; 
-  z-index: 5; 
-  background: rgb(26, 20, 54); 
-  border-bottom: .5 solid white;
-  @media screen and (min-width: 960px){
-      border-style: none;
+  align-items: center;
+  z-index: 5;
+  background: rgb(26, 20, 54);
+  border-bottom: 0.5 solid white;
+  @media screen and (min-width: 960px) {
+    border-style: none;
   }
 }
 
+.profile-pic {
+  max-width: 30%;
+  height: auto;
+  border: solid 2px var(--highlighted-text);
+  border-radius: 1rem;
+}
 
 .navbar-button {
   display: block;
@@ -22,34 +28,36 @@
   padding: 1rem;
   text-align: center;
   justify-content: center;
-  transition: width 2s, height 2s, background-color 1s, transform 1s, border .25s;
-  color:rgb(113, 107, 156);
+  -webkit-transition: width 2s, height 2s, background-color 1s, transform 1s,
+    border 0.25s;
+  transition: width 2s, height 2s, background-color 1s, transform 1s,
+    border 0.25s;
+  color: rgb(113, 107, 156);
 
-  svg{
-      display: block;
-      text-align: center;
+  svg {
+    display: block;
+    text-align: center;
   }
-  &:hover{
-      color: rgba($color: #ddd6d6, $alpha: 1.0);
-      border: 3px solid rgba(255, 255, 255, 0.5);
-      border-image: linear-gradient(45deg, red, blue) 1;
-      border-radius: 1rem;
-      animation: fade-in 3s;
-      
+  &:hover {
+    color: rgba($color: #ddd6d6, $alpha: 1);
+    border: 3px solid rgba(255, 255, 255, 0.5);
+    border-image: linear-gradient(45deg, red, blue) 1;
+    border-radius: 1rem;
+    animation: fade-in 3s;
   }
 }
 
 .navbar-transition {
-  position:relative;
+  position: relative;
   color: #716b9c;
   margin: 0 1rem;
   padding: 1rem;
-  svg{
+  svg {
     display: block;
     text-align: center;
   }
-  &:hover{
-    color: rgba($color: #ddd6d6, $alpha: 1.0);
+  &:hover {
+    color: rgba($color: #ddd6d6, $alpha: 1);
     border: 3px solid rgba(255, 255, 255, 0.5);
     border-image: linear-gradient(45deg, red, blue) 1;
     border-radius: 1rem;
@@ -58,85 +66,79 @@
   }
 }
 
-.title { 
-    margin: 0 2rem;
-    text-align: center;
-    font-family: serif;
-    color: rgba(255, 255, 255, 0.5);
-    transition: color 1s ease;
-    @media screen and (min-width: 960px){
-      border-style: none;
-      color: transparent;
+.title {
+  margin: 0 2rem;
+  text-align: center;
+  font-family: serif;
+  color: rgba(255, 255, 255, 0.5);
+  -webkit-transition: color 1s ease;
+  transition: color 1s ease;
+  @media screen and (min-width: 960px) {
+    border-style: none;
+    color: transparent;
   }
-
 }
 
-
-//Sidebar styling 
+//Sidebar styling
 @keyframes fade-in {
-    from {
-      opacity: .5;
-      transform: translateY(-5px)
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
+  from {
+    opacity: 0.5;
+    transform: translateY(-5px);
   }
-  
-  @keyframes fade-out {
-    from {
-      opacity: 1;
-      transform: translateY(0);
-    }
-    to {
-      opacity: 0;
-      transform: translateY(-20px)
-    }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+}
 
 .close-btn {
-    font-size: 2rem;
-    background: transparent;
-    border-color: transparent;
-    color: var(--clr-grey-5);
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    cursor: pointer;
+  font-size: 2rem;
+  background: transparent;
+  border-color: transparent;
+  color: var(--clr-grey-5);
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  cursor: pointer;
 }
 
-.subbar-links-active{
+.subbar-links-active {
   display: flex;
   justify-content: space-between;
-  padding: .5rem .5rem;
+  padding: 0.5rem 0.5rem;
   padding-top: 3rem;
   background: transparent;
   position: fixed;
   opacity: 1;
 
-
-    .sublinks{
-        padding: .5rem .5rem;
-        margin: 0rem 1rem;
-        border-radius: .5rem;
-        color: grey;
-
-    }
-    .sublinks-active{
-        padding: .5rem .5rem;
-        color: white;
-        background-color: rgba(104, 82, 231, 0.5);
-        border-radius: .5rem;
-
-    }
+  .sublinks {
+    padding: 0.5rem 0.5rem;
+    margin: 0rem 1rem;
+    border-radius: 0.5rem;
+    color: grey;
+  }
+  .sublinks-active {
+    padding: 0.5rem 0.5rem;
+    color: white;
+    background-color: rgba(104, 82, 231, 0.5);
+    border-radius: 0.5rem;
+  }
 }
 
-
-
 .hide {
-    // animation: fade-out .1s;
-    opacity: 0;
-    height: 0;
-    overflow: hidden;
+  // animation: fade-out .1s;
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
 }
