--- a/client/src/styles/_home.scss
+++ b/client/src/styles/_home.scss
@@ -1,357 +1,406 @@
-@import '_variables';
+@import "_variables";
 
 .image-container {
-    height: 30em;
-    background: rgb(10, 47, 49);
-    z-index: -3;
-    overflow: hidden;
+  height: 30em;
+  background: rgb(10, 47, 49);
+  z-index: -3;
+  overflow: hidden;
 }
 
 .vid-container {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
-#canvas{
-    height: 100%;
-    width: 100%;
+#canvas {
+  height: 100%;
+  width: 100%;
 }
-
 
 // running Pikachu
 .scroll-left {
-    position: relative;
-    overflow: hidden;
-    height: 80px;
+  position: relative;
+  overflow: hidden;
+  height: 80px;
 }
-.scroll-left >  div { 
-    position: absolute;
-    margin: 0;
-    width: 100%;
-    height: 100px;
+.scroll-left > div {
+  position: absolute;
+  margin: 0;
+  width: 100%;
+  height: 100px;
 
-    transform:translateX(100%);
-    animation: scroll-left 10s linear infinite; 
-    img{
-        transform: scaleX(-1);
-        width: 100px;
-    }
-    &:hover{
-        animation-play-state: paused;
-    }
-}
-
-.contact-link{
-    position: absolute;
-    margin: 1.5rem;
-    border-radius: .5rem;
-    background-color: var(--primary-text-color);
-    color:var(--blue-text-hover);
-    padding: .25rem 1rem;
-    margin-bottom: .25rem;
-    a {
-        color:var(--blue-text-hover);
-    }
+  transform: translateX(100%);
+  animation: scroll-left 10s linear infinite;
+  img {
+    transform: scaleX(-1);
+    width: 100px;
+  }
+  &:hover {
+    animation-play-state: paused;
+  }
 }
 
-@keyframes scroll-left { 
-    0% {
-        transform: translateX(100%);
-    }
-    100% {
-        transform: translateX(-100%);
-    }
+.contact-link {
+  position: absolute;
+  margin: 1.5rem;
+  border-radius: 0.5rem;
+  background-color: var(--primary-text-color);
+  color: var(--blue-text-hover);
+  padding: 0.25rem 1rem;
+  margin-bottom: 0.25rem;
+  a {
+    color: var(--blue-text-hover);
+  }
 }
 
-
+@keyframes scroll-left {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
 
 //staircase for introduction purposes
 
-.staircase:nth-child(n) { 
-    text-align: left;
-    color: var(--primary-text-color2);
+.staircase:nth-child(n) {
+  text-align: left;
+  color: var(--primary-text-color2);
 }
 
 @media (max-width: 500px) {
-div {
-    margin-left: 0 !important;     
+  div {
+    margin-left: 0 !important;
+  }
 }
-}
-.social-links { 
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    .links {
-        svg { 
-            --trans: all .3s;
-            margin: .5rem;
-            width: 2rem;
-            height: 100%;
-            color: var(--primary-text-color2);
-            -webkit-transition: var(--trans);
-            transition: var(--trans);
-            position: relative;
-            overflow: hidden;
-            z-index: 1;
-            &:hover {
-                color:var(--secondary-color);
-                &:before {
-                    width: 100%;
-            }
+.social-links {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  .links {
+    svg {
+      --trans: all 0.3s;
+      margin: 0.5rem;
+      width: 2rem;
+      height: 100%;
+      color: var(--primary-text-color2);
+      -webkit-transition: var(--trans);
+      transition: var(--trans);
+      position: relative;
+      overflow: hidden;
+      z-index: 1;
+      &:hover {
+        color: var(--secondary-color);
+        &:before {
+          width: 100%;
         }
-        }
-        
+      }
     }
-}
-        
-.red-btn-container{
-    display: flex;
-    margin-left: 0; 
-    text-align: left;
-    margin: 1rem 0;
-    font-size: .75rem;
-
-    button {
-        --trans: all .35s;
-        display: block;
-        padding: 1rem;
-        margin-right: .25rem;
-        color: var(--blue-text-background-hover);
-        font-family: ff-secondary;
-        font-weight: bold;
-        font-size: 1.5rem;
-        border: 2px solid var(--blue-text-background-hover);
-        text-align: center;
-        position: relative;
-        -webkit-transition: var(--trans);
-        transition: var(--trans) ;
-        span{
-            position: relative;
-            z-index: 2;
-        }
-        &:after{
-            position: absolute;
-            content: "";
-            top: 0;
-            left: 0;
-            width: 0;
-            height: 100%;
-            background: var(--blue-text-background-hover);
-            -webkit-transition: var(--trans);
-            transition: var(--trans) ;
-        }
-        
-        &:hover{
-            color: #fff;
-            transform: rotate(0.0625turn);
-        }
-        
-        &:hover:after{
-            width: 100%;
-        }
-    }
-    > span{
-        align-self: end;
-        margin-left: .25rem;
-        color: var(--blue-text-background-hover)
-    }
-    @media screen and (min-width: 768px) {
-        font-size: 1rem;
-    }
+  }
 }
 
+.red-btn-container {
+  display: flex;
+  margin-left: 0;
+  text-align: left;
+  margin: 1rem 0;
+  font-size: 0.75rem;
 
-.life-motto {
+  button {
+    --trans: all 0.35s;
+    display: block;
+    padding: 1rem;
+    margin-right: 0.25rem;
+    color: var(--blue-text-background-hover);
+    font-family: ff-secondary;
+    font-weight: bold;
+    font-size: 1.5rem;
+    border: 2px solid var(--blue-text-background-hover);
+    text-align: center;
     position: relative;
-    margin: auto;
-    background-color: var( --highlighted-background);
-    opacity: .75;
-    color: var(--primary-text-color2);
-    border-radius: .5rem;
-    padding: 1rem 2rem;
-    width: 75%;
-    &::before {
-        position: absolute;
-        transform: rotate(-45deg);
-        font-family: "Lucida Console", "Courier New";
-        content: "Status";
-        background-color: rgba(yellow, 0.7);
-        color: var(--blue-text);
-        border-radius: .5rem;
-        padding: .25rem 2rem;
-        width: auto;
-        height: auto;
-        left: -2rem;
-        top: -1rem;
-
+    -webkit-transition: var(--trans);
+    transition: var(--trans);
+    span {
+      position: relative;
+      z-index: 2;
     }
+    &:after {
+      position: absolute;
+      content: "";
+      top: 0;
+      left: 0;
+      width: 0;
+      height: 100%;
+      background: var(--blue-text-background-hover);
+      -webkit-transition: var(--trans);
+      transition: var(--trans);
+    }
+
+    &:hover {
+      color: #fff;
+      transform: rotate(0.0625turn);
+    }
+
+    &:hover:after {
+      width: 100%;
+    }
+  }
+  > span {
+    align-self: end;
+    margin-left: 0.25rem;
+    color: var(--blue-text-background-hover);
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 1rem;
+  }
+}
+
+@mixin wave-pos {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+}
+@mixin wave-hov {
+  position: absolute;
+  width: 300%;
+  animation: move_wave 2s linear infinite;
+}
+.life-motto {
+  position: relative;
+  margin: 1rem;
+  background-color: var(--highlighted-background);
+  min-height: 350px;
+  opacity: 0.75;
+  color: var(--primary-text-color2);
+  border-radius: 0.5rem;
+  padding: 0.5rem 2rem;
+  width: 75%;
+  overflow: hidden;
+  @media screen and (max-width: 768px) {
+    min-height: 250px;
+  }
+  * {
+    color: var(--primary-text-color);
+  }
+  .wave1 {
+    @include wave-pos;
+  }
+  .wave2 {
+    @include wave-pos;
+    transform: Scale(-X);
+    opacity: 0.5;
+  }
+  .wave3 {
+    @include wave-pos;
+    opacity: 0.75;
+    transform: translateX(100%);
+  }
+  &:hover {
+    width: 101%;
+    .wave1 {
+      @include wave-hov;
+    }
+    .wave2 {
+      @include wave-hov;
+      animation-direction: reverse;
+    }
+    .wave3 {
+      @include wave-hov;
+      animation-direction: reverse;
+    }
+    h2 {
+      font-size: 1.5rem;
+    }
+    p {
+      font-size: 105%;
+    }
+  }
+}
+
+@keyframes move_wave {
+  0% {
+    transform: translateX(15%);
+  }
+  50% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-30%);
+  }
 }
 
 .introduction {
-    padding: 50px;
-    text-align: center;
+  padding: 50px;
 
-    max-width: var(--max-width);
-    h5{
-        opacity: .8;
-    }
-
+  max-width: var(--max-width);
+  h5 {
+    opacity: 0.8;
+  }
 }
 
-
 .context {
-    margin: 1rem;
-    margin-top: 5rem;
-    color: black;
-    p {
-        margin: 0;
-    }
+  margin: 1rem;
+  margin-top: 5rem;
+  color: black;
+  p {
+    margin: 0;
+  }
 }
 
 .flex {
-    display: flex;
-    justify-content: space-between;
-    > p {
-        padding: .25rem 1rem;
-        background-color: var(--blue-text-background);
-        color: var(--primary-text-color2);
-        border-radius: .25rem;
-
-    }
+  display: flex;
+  justify-content: space-between;
+  > p {
+    padding: 0.25rem 1rem;
+    background-color: var(--blue-text-background);
+    color: var(--primary-text-color2);
+    border-radius: 0.25rem;
+  }
 }
 
 .absolute-image {
-    --trans: width .5s;
-    position: absolute;
-    width: 20rem;
-    height: 20rem;
-    top: -200%;
-    right: 5%;
-    -webkit-transition: var(--trans) ;
-    transition: var(--trans);
-    @media screen and (max-width: 1500px){
-        width: 0;
-    }
+  --trans: width 0.5s;
+  position: absolute;
+  width: 20rem;
+  height: 20rem;
+  top: -120%;
+  right: 5%;
+  -webkit-transition: var(--trans);
+  transition: var(--trans);
+  @media screen and (max-width: 1024px) {
+    width: 0;
+  }
 }
 
-.img-container{
-    max-width: 90%;
-    border-radius: 50px;
-    margin: 0;
-    margin-top: .5rem;
-    border: .25rem solid rgb(148, 116, 58);
-    position: relative;
+.details-container {
+  @media screen and (min-width: 1025px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &:child {
+    padding: 2rem;
+  }
+}
+
+.img-container {
+  max-width: 90%;
+  border-radius: 50px;
+  margin: 0;
+  margin-top: 0.5rem;
+  border: 0.25rem solid rgb(148, 116, 58);
+  position: relative;
 }
 
 .skills-outer-container {
-    color: #246A73;
-    border-radius: 2rem;
-    padding: 2rem;
-    max-width: var(--max-width);
-    @media only screen and (max-width: 1200px) {
-        overflow: hidden;
-        -ms-overflow-style: none; 
-        scrollbar-width: none; 
-    }
+  color: #246a73;
+  border-radius: 2rem;
+  padding: 2rem;
+  max-width: var(--max-width);
+  @media only screen and (max-width: 1200px) {
+    overflow: hidden;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 
-    &::-webkit-scrollbar{
-        display: none;
-    }
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .outer-outer-container {
-    position: relative;
-    background-color: var(--background-color);
-
+  position: relative;
+  background-color: var(--background-color);
 }
 
 .skills-container {
+  display: grid;
 
-    display:grid;
+  grid-template-columns: repeat(6, min-content);
+  gap: 5rem 5rem;
+  align-content: center;
+  justify-content: center;
+  min-height: 100%;
+  box-sizing: border-box;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 
-    grid-template-columns: repeat(6,min-content);
-    gap:5rem 5rem;
-    align-content:center;
-    justify-content:center;
-    min-height: 100%;
-    box-sizing: border-box;
-    -ms-overflow-style: none; 
-    scrollbar-width: none; 
+  svg:hover {
+    transform: rotate(30deg);
+  }
 
-    svg:hover{
-        transform: rotate(30deg);
+  @media only screen and (max-width: 1500px) {
+    gap: 3rem 6rem;
+
+    svg {
+      width: 5rem;
+      height: 100%;
     }
+  }
+  @media only screen and (max-width: 1300px) {
+    grid-template-columns: repeat(5, min-content);
 
-    @media only screen and (max-width: 1500px) {
-        gap:3rem 6rem;
-
-        svg{
-            width: 5rem;
-            height: 100%;
-        }
+    svg {
+      width: 5rem;
+      height: 100%;
     }
-    @media only screen and (max-width: 1300px) {
-        grid-template-columns: repeat(5,min-content);
+  }
+  @media only screen and (max-width: 1100px) {
+    grid-template-columns: repeat(4, min-content);
 
-        svg{
-            width: 5rem;
-            height: 100%;
-        }
+    svg {
+      width: 3rem;
+      height: 100%;
     }
-    @media only screen and (max-width: 1100px) {
-        grid-template-columns: repeat(4,min-content);
+  }
+  @media only screen and (max-width: 750px) {
+    gap: 1rem 1.5rem;
+    grid-template-columns: repeat(3, min-content);
 
-        svg{
-            width: 3rem;
-            height: 100%;
-        }
+    svg {
+      width: 3rem;
+      height: 100%;
     }
-    @media only screen and (max-width: 750px) {
-        gap:1rem 1.5rem;
-        grid-template-columns: repeat(3,min-content);
-
-        svg{
-            width: 3rem;
-            height: 100%;
-        }
-    }
-
+  }
 }
 .lighter {
-    opacity: .25;
+  opacity: 0.25;
 }
 
-.description-container{
-    position: absolute; 
-    pointer-events: none;
-    opacity: .9;
-    top: 30%;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 10rem;
-    background: rgba(255,255,255,0.85);
-    z-index: index 6;;
-    color: var(--primary-text-color);
-    padding: 3rem;
-    width: 50%;
-    height: 50%;
+.description-container {
+  position: absolute;
+  pointer-events: none;
+  opacity: 0.9;
+  top: 30%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 10rem;
+  background: rgba(255, 255, 255, 0.85);
+  z-index: index 6;
+  color: var(--primary-text-color);
+  padding: 3rem;
+  width: 50%;
+  height: 50%;
+  margin: 0;
+  border-radius: 3rem;
+  @media screen and (max-width: 600px) {
+    padding-right: 0.25rem;
+    padding-left: 0.25rem;
+    h1 {
+      font-size: 200%;
+    }
+    padding-top: 1rem;
     margin: 0;
-    border-radius: 3rem;
-    @media screen and (max-width: 600px){
-        padding-right: .25rem; 
-        padding-left: .25rem;
-        h1 {
-            font-size: 200%;
-        }
-        padding-top: 1rem;
-        margin: 0;
-        font-size: 75%;
-    }
-    p {
-        margin: auto;
-        margin-top: 5rem;
-    }
-    svg {
-        width: 5rem;
-        height: 5rem;
-    }
+    font-size: 75%;
+  }
+  p {
+    margin: auto;
+    margin-top: 5rem;
+  }
+  svg {
+    width: 5rem;
+    height: 5rem;
+  }
 }
