--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,17 +1,11 @@
 @import "_globals";
-@import '_variables';
-@import '_layout';
-@import '_home';
-@import '_about';
-@import '_projects';
-@import '_footer';
-@import '_submenu';
-@import '_navbar';
-@import '_contacts.scss';
-
-
-
-
-
-
-
+@import "_variables";
+@import "_layout";
+@import "_home";
+@import "_about";
+@import "_projects";
+@import "_footer";
+@import "_submenu";
+@import "_navbar";
+@import "_contacts.scss";
+@import "_svg.scss";
