--- a/client/src/styles/_projects.scss
+++ b/client/src/styles/_projects.scss
@@ -1,71 +1,87 @@
-@mixin flex-box{
-    padding: 0rem;
-    margin: 1.5rem;
-    padding-bottom: 1rem;
-    background: rgba(gray,.5);
-    ul{
-        list-style-type: square;
-    }
-    li{
-        text-align: left;
-    }
-    h3{
-        background: gray;
-    }
+@mixin flex-box {
+  padding: 0rem;
+  margin: 1.5rem;
+  padding-bottom: 1rem;
+  background: rgba(gray, 0.5);
+  ul {
+    list-style-type: square;
+  }
+  li {
+    text-align: left;
+  }
+  h3 {
+    background: gray;
+  }
 
-    span{
-        color: blue;
-    }
+  span {
+    color: blue;
+  }
 }
 
-.projects-background{
-    background-color: var(--background-color2);
+.projects-background {
+  background-color: var(--highlighted-background);
 }
-.projects-container { 
-    padding: 50px;
-    max-width: var(--max-width);
+.projects-container {
+  padding: 50px;
+  max-width: var(--max-width);
 }
 
-.project-container{
-    
-    display: flex;
-    padding: 2rem;
-    justify-content: space-between;
-    align-items: center;
-
-    @media screen and (max-width: 800px){
-        display: block;
-        width: 100%;
+.project-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+  }
+  .projTitle {
+    visibility: collapse;
+  }
+  .project {
+    display: block;
+    border-radius: 1rem;
+    margin: 2rem;
+    transition: transform 0.3s, -webkit-transform 0.3s;
+    width: 80%;
+    height: 100%;
+    overflow: hidden;
+    &:hover {
+      transform: scale(1.025);
+      opacity: 0.8;
+      &::before {
+        position: absolute;
+        content: "";
+        background: var(--primary-text-color2);
+        opacity: 80%;
+        inset: 0;
+      }
+      &::after {
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        content: "";
+        transform: scale(0.8);
+        background: transparent;
+        border: solid white 0.5rem;
+        border-radius: 5%;
+        opacity: 80%;
+      }
+      .projTitle {
+        position: absolute;
         left: 50%;
-
-    }
-    .project{
-        display: block;
-        margin: 0 2rem;
-        height: 40%;
-        font-size: 4rem;
-        background-color: grey;
-        border-radius: 1rem;
+        transform: translateX(-50%);
+        top: 50%;
+        visibility: visible;
         text-align: center;
-        color: white;
-        transition: -webkit-transform .3s;
-        transition: transform .3s;
-        transition: transform .3s,-webkit-transform .3s;
-        width: 100%;
-        overflow: hidden;
-        object-fit: cover;
-        @media screen and (min-width: 800px){
-            width: 50%;
-    
-        }
-        &:hover{
-            transform: translateY(-10px);
-            opacity: .9;
-
-        }
-        img{
-            max-width: none;
-            margin: 0;
-        }
+        font-size: 3rem;
+      }
     }
+    img {
+      float: left;
+      width: 100%;
+      height: 20rem;
+      object-fit: cover;
+    }
+  }
 }
