--- a/client/src/styles/_svg.scss
+++ b/client/src/styles/_svg.scss
@@ -13,13 +13,13 @@
 .wave svg {
   position: relative;
   display: block;
-  width: calc(154% + 1.3px);
-  height: 118px;
+  width: calc(148% + 1.3px);
+  height: 101px;
   transform: rotateY(180deg);
 }
 
 .wave .shape-fill {
-  fill: #d4f1f4;
+  fill: #f3f7fb;
 }
 
 .wave2 {
