--- a/client/src/styles/_home.scss
+++ b/client/src/styles/_home.scss
@@ -1,17 +1,16 @@
 @import "_variables";
 
 .image-container {
-  height: 30em;
+  height: 20em;
   background: rgb(10, 47, 49);
   z-index: -3;
   overflow: hidden;
+  object-fit: cover;
 }
 
-.vid-container {
-  height: 100%;
-  width: 100%;
-}
-#canvas {
+.hero {
+  object-fit: cover;
+  -o-object-fit: cover;
   height: 100%;
   width: 100%;
 }
@@ -224,11 +223,21 @@
   }
 }
 
+.intro-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: rgba(243, 247, 251, 1);
+  box-shadow: 0 0 2rem 0 rgba(243, 247, 251, 1);
+  // filter: blur(4px);
+}
+
 .introduction {
   padding: 50px;
   position: relative;
-  background-color: var(--background-color);
+  // background-color: var(--background-color);
   max-width: var(--max-width);
+  margin: auto;
   h5 {
     opacity: 0.8;
   }
