--- a/client/src/styles/_projects.scss
+++ b/client/src/styles/_projects.scss
@@ -31,6 +31,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 2rem;
   padding-bottom: 3rem;
   @media screen and (max-width: 800px) {
     flex-direction: column;
