add and update transitions

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -62,6 +62,7 @@ Variables
 	/* primary color */
 	--turquoise: #3f485e;
 	--bluish-black: #00040b;
+	--lightcyan: #0f8b8d;
 	--primary-text-color: #160f29;
 	--primary-text-color2: #246a73;
 	--background-color: #d4f1f4;
