--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -62,7 +62,8 @@ Variables
 	/* primary color */
 	--turquoise: #3f485e;
 	--bluish-black: #00040b;
-	--lightcyan: #0f8b8d;
+	--darkcyan: #0f8b8d;
+	--gamboge:#ec9a29;
 	--primary-text-color: #160f29;
 	--primary-text-color2: #246a73;
 	--background-color: #d4f1f4;
