update project icons

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -135,3 +135,39 @@ img {
 	padding: 0 15px;
 	object-fit: cover;
 }
+
+@keyframes bounce {
+	0% {
+		transform: scale(1, 1) translate(0px, 0px);
+	}
+
+	30% {
+		transform: scale(1, 0.8) translate(0px, 10px);
+	}
+
+	75% {
+		transform: scale(1, 1.1) translate(0px, -25px);
+	}
+
+	100% {
+		transform: scale(1, 1) translate(0px, 0px);
+	}
+}
+
+@keyframes bounce2 {
+	0% {
+		transform: scale(1, 1) translate(0px, 0px);
+	}
+
+	30% {
+		transform: scale(1, 0.8) translate(0px, 5px);
+	}
+
+	75% {
+		transform: scale(1, 1.1) translate(0px, -10px);
+	}
+
+	100% {
+		transform: scale(1, 1) translate(0px, 0px);
+	}
+}
